[gd_scene load_steps=3 format=3 uid="uid://tgtqllf7c74x"]

[ext_resource type="Script" path="res://ui/start_menu.gd" id="1_h0xje"]
[ext_resource type="Texture2D" uid="uid://beuwolut4qase" path="res://assets/Fearless.png" id="1_v7wsn"]

[node name="StartMenu" type="CanvasLayer"]
script = ExtResource("1_h0xje")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Panel"]
position = Vector2(691, 381)
scale = Vector2(1.01561, 1.01172)
texture = ExtResource("1_v7wsn")

[node name="Button" type="Button" parent="."]
offset_left = 22.0
offset_top = 549.0
offset_right = 373.0
offset_bottom = 618.0
text = "Start"

[node name="Gamertag" type="LineEdit" parent="."]
unique_name_in_owner = true
offset_left = 31.0
offset_top = 476.0
offset_right = 359.0
offset_bottom = 514.0
placeholder_text = "CID"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="text_submitted" from="Gamertag" to="." method="_on_gamertag_text_submitted"]
